--- a/lesson5_admin/myproject/posts/templates/posts/posts_page.html
+++ b/lesson5_admin/myproject/posts/templates/posts/posts_page.html
@@ -1,25 +1,15 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Posts
+    {{ post.title }}
 {% endblock %}
 
 {% block content %}
     <section>
-
-    {% for post in posts %}
         <article class="post">
-            <h2>
-                <a href="{% url 'page' slug=post.slug %}">
-                    {{ post.title }}
-                </a>
-            </h2>
+            <h2>{{ post.title }}</h2>
             <p>{{ post.date }}</p>
             <p>{{ post.body }}</p>
         </article>
-    {% endfor %}
-
-            
     </section>
 {% endblock %}
-
