feat: Add base layout template, posts app URLs, and posts list template.

--- a/lesson5_admin/myproject/templates/layout.html
+++ b/lesson5_admin/myproject/templates/layout.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="/">🏠</a>
         <a href="/about/">😊</a>
-        <a href="{% url 'posts' %}">🌚</a>
+        <a href="{% url 'Posts:list' %}">🌚</a>
     </nav>
     <main>
         {% block content %}
